Row class renamed to custom-row to not conflict with bootstrap. Drop shadow and z-index's fixed on home and tribes.

--- a/NASCA-site/css/home.css
+++ b/NASCA-site/css/home.css
@@ -39,6 +39,7 @@
   min-height: 222px;
   height: 222px;
   position: relative;
+  z-index: 2;
 }
 
 .home-card {
@@ -49,7 +50,7 @@
   top: 0;
   left: 0;
   /*box-shadow: 3px 10px 18px -2px rgb(150,150,150);*/
-  z-index: 1;
+  z-index: 2;
   transition-duration: 0.4s;
 }
 
